Fix preferences hint gets scrollbar if there's only one setting on a tab

--- a/preferences/templates/pixelegg/app.css
+++ b/preferences/templates/pixelegg/app.css
@@ -28,7 +28,6 @@ table.prefTable tbody tr.prefRow:first-child > .prefHelpColumn {
   background-image: url(../../../api/templates/default/images/hint.png);
   background-repeat: no-repeat;
   background-position: center;
-  position: absolute;
   height: 99%;
 }
 tr.prefRow:hover {
